--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -9,6 +9,7 @@
   animation-name: middle;
   animation-duration: .1s;
   animation-fill-mode: forwards;
+
 }
 
 .hamburger:hover > div:nth-child(3){
@@ -28,16 +29,16 @@ nav {
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from {transform: rotate(0);}
+  to {transform: translatey(34px) rotate(45deg);}
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  from {opacity:  1}
+  to {opacity: 0}
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  from {transform: rotate(0)}
+  to {transform: translatey(-34px) rotate(-45deg);}
 }
